--- a/Round 1A/Dockerfile
+++ b/Round 1A/Dockerfile
@@ -1,1 +1,16 @@
+FROM --platform=linux/amd64 python:3.9-slim
 
+WORKDIR /app
+
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
+
+RUN mkdir -p /app/input /app/output
+
+CMD ["python", "main.py"]
